<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="shutdown">Shutdown</string>
    <string name="replace">Replace</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting…</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="not_available">N/A</string>
    <string name="elapsed_time_format_d_h_mm">%1$d d. %2$d h. %3$d m</string>
    <string name="elapsed_time_format_h_mm_ss">%1$d h. %2$d m. %3$d s</string>
    <string name="elapsed_time_format_mm_ss">%1$d m. %2$d s</string>
    <string name="elapsed_time_format_ss">%1$d s</string>
    <string name="def">Default</string>
    <string name="foreground_notification">Foreground notification</string>
    <string name="link">Link</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="menu">Menu</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="finished">Finished</string>
    <string name="pause_all">Pause all</string>
    <string name="resume_all">Resume all</string>
    <string name="all">All</string>
    <string name="details">Details</string>
    <string name="stats">Stats</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="clipboard">Clipboard</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="delete_torrent_with_downloaded_files">Delete with downloaded files</string>
    <string name="delete_selected_torrent">Delete selected torrent? (Cannot be undone.)</string>
    <string name="delete_selected_torrents">Delete selected torrents? (Cannot be undone.)</string>
    <string name="force_recheck_torrent">Force recheck</string>
    <string name="force_announce_torrent">Force-announce</string>
    <string name="add_link">Add link</string>
    <string name="dialog_add_link_title">Enter the infohash value, magnet link, or HTTP/S link</string>
    <string name="torrent_list_empty">No torrents</string>
    <string name="select_or_add_torrent">Select or add a torrent</string>
    <string name="error_empty_link">Enter the link</string>
    <string name="error_invalid_link">Invalid link</string>
    <string name="error_open_torrent_file">Cannot open the .torrent file</string>
    <string name="error_open_ip_filter_file">Cannot open the IP filter file</string>
    <string name="error_select_folder">Cannot open the selected folder</string>
    <string name="open_file">Open file</string>
    <string name="settings">Settings</string>
    <string name="ip_filter_add_error">Could not add IP filter (%1$d failed). Maybe the file is damaged or in the wrong format?</string>
    <string name="ip_filter_add_success">IP filter added</string>
    <string name="proxy_settings_applied">Using the new proxy server settings.</string>
    <string name="proxy_settings_apply_after_reboot">Restart the app to use the new proxy settings.</string>
    <string name="theme_settings_apply_after_reboot">Restart the app to use the new theme.</string>
    <string name="apply_settings_after_reboot">Changes will be applied after restarting the app.</string>
    <string name="about">About</string>
    <string name="error_open_torrent">Unable to open torrent</string>
    <string name="session_stats_dht_nodes">DHT nodes: %1$d</string>
    <string name="session_stats_download_upload">%1$s \u2022 %2$s/s</string>
    <string name="session_stats_listen_port">Listening port: %1$s</string>
    <string name="drawer_status">Status</string>
    <string name="drawer_status_downloading">Downloading…</string>
    <string name="drawer_status_downloaded">Downloaded</string>
    <string name="drawer_status_downloading_metadata">Downloading metadata…</string>
    <string name="drawer_status_error">Error</string>
    <string name="drawer_sorting">Sorting</string>
    <string name="drawer_sorting_name">Name</string>
    <string name="drawer_sorting_date_added">Date added</string>
    <string name="drawer_sorting_size">Size</string>
    <string name="drawer_sorting_progress">Progress</string>
    <string name="drawer_sorting_ETA">ETA</string>
    <string name="drawer_sorting_peers">Popularity</string>
    <string name="drawer_sorting_no_sorting">No sorting</string>
    <string name="drawer_date_added">Date added</string>
    <string name="drawer_date_added_today">Today</string>
    <string name="drawer_date_added_yesterday">Yesterday</string>
    <string name="drawer_date_added_week">Week</string>
    <string name="drawer_date_added_month">Month</string>
    <string name="drawer_date_added_year">Year</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tag</string>
    <string name="edit_tag">Edit tag</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_color">Tag color</string>
    <string name="add_tag_failed">Could not add tag</string>
    <string name="tag_deleting_failed">Could not delete tag</string>
    <string name="tag_already_exists">This tag already exists</string>
    <string name="no_tags">No tags</string>
    <string name="select_tag">Select tag</string>
    <string name="new_tag">New tag</string>
    <string name="without_tags">Without tags</string>
    <string name="downloading_torrent_notify_template">%1$d%% \u2022 %2$s \u2022 \u2193 %3$s/s \u2022 %4$s</string>
    <string name="single_downloading_torrent_notify_template">%1$d%% \u2022 %2$s \u2022 \u2193 %3$s/s</string>
    <string name="foreground_notify_template">\u2193 %1$s/s | \u2191 %2$s/s \u2022 %3$s</string>
    <string name="seeding_torrent_notify_template">%1$s \u2022 \u2191 %2$s/s \u2022 %3$s</string>
    <string name="other_torrent_notify_template">%1$s \u2022 %2$s</string>
    <string name="torrent_count_notify_template">%1$d ⬇ of %2$d</string>
    <string name="app_running_in_the_background">Running in the background…</string>
    <string name="network_online">Online</string>
    <string name="network_offline">Offline</string>
    <string name="notify_shutting_down">Shutting down…</string>
    <string name="torrent_error_notify_title">Torrent error</string>
    <string name="error_template">Error: %1$s</string>
    <string name="restore_torrent_error">Cannot restore torrent from previous session.</string>
    <string name="session_error_title">Session error</string>
    <string name="nat_error_title">NAT error</string>
    <string name="torrent_finished_notify">Torrent finished</string>
    <string name="torrent_moving_title">Moving torrent…</string>
    <string name="torrent_moving_content">Please wait while moving %1$s…</string>
    <string name="torrent_move_success">Torrent moved</string>
    <string name="torrent_move_fail">Could not move torrent</string>
    <string name="download_counter_template">%1$s/%2$s (%3$d%%)</string>
    <string name="download_upload_speed_template">\u2193 %1$s/s | \u2191 %2$s/s</string>
    <string name="download_counter_ETA_template">%1$s/%2$s \u2022 %3$d%% %4$s</string>
    <string name="peers_template">%1$d/%2$d</string>
    <string name="torrent_status_downloading">Downloading…</string>
    <string name="torrent_status_seeding">Seeding…</string>
    <string name="torrent_status_paused">Paused</string>
    <string name="torrent_status_stopped">Stopped</string>
    <string name="torrent_status_checking">Checking…</string>
    <string name="torrent_status_finished">Finished</string>
    <string name="torrent_status_downloading_metadata">Downloading metadata…</string>
    <string name="perm_denied_title">Permission denied</string>
    <string name="perm_denied_warning">Storage permission is required to download torrents and access .torrent files. Do you really want to deny this permission\?</string>
    <string name="manage_all_files_warning_dialog_title">Warning</string>
    <string name="manage_all_files_warning_dialog_description">Don\'t use the Google Play version of LibreTorrent if you want to save torrents in folders other than \'Downloads\' and similar.
\nThere are other sources on the project page.</string>
    <string name="add_torrent_title">Add torrent</string>
    <string name="error_decode_torrent">Could not decode .torrent file. Maybe it is damaged or in the wrong format?</string>
    <string name="error_io_torrent">Could not read the .torrent file</string>
    <string name="error_fetch_link">Could not fetch data from the link</string>
    <string name="error_fetch_torrent_metadata">Could not fetch metadata</string>
    <string name="error_invalid_link_or_path">Invalid link or torrent path</string>
    <string name="error_add_torrent">Could not add the torrent</string>
    <string name="error_file_not_found_add_torrent">Could not add the torrent. Maybe the .torrent file moved, or got deleted?</string>
    <string name="error_io_add_torrent">Cannot add the torrent due to an I/O error.</string>
    <string name="torrent_exist">Since the torrent already exists they were merged.</string>
    <string name="error_field_required">Required field</string>
    <string name="error_no_files_selected">No files selected</string>
    <string name="free_space">%1$s free</string>
    <string name="error_free_space">Not enough free space there to download the selected files.</string>
    <string name="files_size">%1$s of %2$s selected</string>
    <string name="start_torrent">Start torrent</string>
    <string name="file_is_too_large_error">File too large</string>
    <string name="unable_to_open_folder">Cannot open the selected folder. Try selecting a different one.</string>
    <string name="error_empty_name">Enter a name</string>
    <string name="dir_chooser_title">Folder selection</string>
    <string name="file_chooser_title">File selection</string>
    <string name="change_priority_low">Low (ignore file)</string>
    <string name="change_priority_normal">Normal</string>
    <string name="change_priority_high">High</string>
    <string name="add_trackers">Add trackers</string>
    <string name="pause_torrent">Pause</string>
    <string name="share_magnet">Share magnet</string>
    <string name="save_torrent_file">Save torrent file</string>
    <string name="torrent_speed_limit">Speed limit</string>
    <string name="copy_link">Copy link</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="file_or_folder_for_seeding">File or folder to seeding</string>
    <string name="tracker_urls">Tracker URLs</string>
    <string name="web_seed_urls">Web-seed URLs</string>
    <string name="comments">Comments</string>
    <string name="optional_hint">(Optional)</string>
    <string name="piece_size">Piece size</string>
    <string name="create_torrent_options">Options</string>
    <string name="option_start_seeding">Start seeding</string>
    <string name="option_private_torrent">Private torrent</string>
    <string name="skip_files">Skip files</string>
    <string name="skip_files_hint">Enter filenames separated by \"|\"</string>
    <string name="log_journal">Journal</string>
    <string name="journal_start_recording">Start recording</string>
    <string name="journal_filter_session_log">Session log</string>
    <string name="journal_filter_dht_log">DHT log</string>
    <string name="journal_filter_peer_log">Connection log</string>
    <string name="journal_filter_portmap_log">UPnP/NAT-PMP log</string>
    <string name="journal_filter_torrent_log">Torrent log</string>
</resources>