<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh_feed_channel_menu"
        android:icon="@drawable/ic_refresh_24px"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_feed_channel_menu"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy_feed_channel_url_menu"
        android:icon="@drawable/ic_content_copy_24px"
        android:title="@string/copy_link"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_feed_channel_menu"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all_channels_menu"
        android:icon="@drawable/ic_select_all_24px"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mark_as_read_menu"
        android:title="@string/mark_as_read"
        app:showAsAction="never" />
</menu>