<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pause_all_menu"
        android:contentDescription="@string/pause_all"
        android:icon="@drawable/ic_pause_24px"
        android:title="@string/pause_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/resume_all_menu"
        android:icon="@drawable/ic_play_arrow_24px"
        android:title="@string/resume_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_menu"
        android:contentDescription="@string/log_journal"
        android:title="@string/log_journal" />

    <item
        android:id="@+id/about_menu"
        android:contentDescription="@string/about"
        android:icon="@drawable/ic_info_24px"
        android:title="@string/about" />

    <item
        android:id="@+id/shutdown_app_menu"
        android:contentDescription="@string/shutdown"
        android:icon="@drawable/ic_power_settings_new_24px"
        android:title="@string/shutdown" />
</menu>