<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_torrent_menu"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete"
        android:contentDescription="@string/delete" />

    <item
        android:id="@+id/force_recheck_torrent_menu"
        android:icon="@drawable/ic_repeat_24px"
        android:title="@string/force_recheck_torrent"
        android:contentDescription="@string/force_recheck_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/force_announce_torrent_menu"
        android:icon="@drawable/ic_wifi_tethering_24px"
        android:title="@string/force_announce_torrent"
        android:contentDescription="@string/force_announce_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all_torrent_menu"
        android:icon="@drawable/ic_select_all_24px"
        android:title="@string/select_all"
        android:contentDescription="@string/select_all"
        app:showAsAction="ifRoom" />
</menu>