<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="org.proninyaroslav.libretorrent.ui.log.LogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/min_width_dialog"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <CheckBox
            android:id="@+id/session_log"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@={viewModel.mutableParams.logSessionFilter}"
            android:text="@string/journal_filter_session_log" />

        <CheckBox
            android:id="@+id/dht_log"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@={viewModel.mutableParams.logDhtFilter}"
            android:text="@string/journal_filter_dht_log" />

        <CheckBox
            android:id="@+id/peer_log"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@={viewModel.mutableParams.logPeerFilter}"
            android:text="@string/journal_filter_peer_log" />

        <CheckBox
            android:id="@+id/portmap_log"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@={viewModel.mutableParams.logPortmapFilter}"
            android:text="@string/journal_filter_portmap_log" />

        <CheckBox
            android:id="@+id/torrent_log"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@={viewModel.mutableParams.logTorrentFilter}"
            android:text="@string/journal_filter_torrent_log" />
    </LinearLayout>
</layout>