<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="?attr/divider"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:layout_marginRight="95dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_or_folder_for_seeding"
                style="@style/BaseTheme.HeaderText" />

            <TextView
                android:id="@+id/file_or_dir_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                style="@style/BaseTheme.TorrentInfoText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/folder_chooser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?attr/defaultRoundRipple"
                android:contentDescription="@string/dir_chooser_title"
                android:src="@drawable/ic_folder_grey600_24dp" />

            <ImageButton
                android:id="@+id/file_chooser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?attr/defaultRoundRipple"
                android:contentDescription="@string/file_chooser_title"
                android:src="@drawable/ic_file_grey600_24dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_torrent_options"
            style="@style/BaseTheme.HeaderText" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow>
                <CheckBox
                    android:id="@+id/option_start_seeding"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:maxLines="2"
                    android:text="@string/option_start_seeding" />

                <CheckBox
                    android:id="@+id/option_private_torrent"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:maxLines="2"
                    android:text="@string/option_private_torrent" />
            </TableRow>

            <TableRow>
                <CheckBox
                    android:id="@+id/option_optimize_alignment"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:maxLines="2"
                    android:text="@string/option_optimize_alignment" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_files"
            style="@style/BaseTheme.HeaderText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_skip_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/skip_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textNoSuggestions"
                android:ellipsize="end"
                android:hint="@string/skip_files_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracker_urls"
            style="@style/BaseTheme.HeaderText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tracker_urls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tracker_urls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:hint="@string/optional_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web_seed_urls"
            style="@style/BaseTheme.HeaderText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_web_seed_urls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/web_seed_urls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:hint="@string/optional_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piece_size"
            style="@style/BaseTheme.HeaderText" />

        <Spinner
            android:id="@+id/pieces_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:entries="@array/piece_size_entries" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            style="@style/BaseTheme.HeaderText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:hint="@string/optional_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>